--- a/templates/index.html
+++ b/templates/index.html
@@ -146,6 +146,12 @@
             color: #9ca3af;
             text-align: center;
         }
+                .footer:hover {
+            margin-top: 3rem;
+            font-size: 0.9rem;
+            color: black;
+            text-align: center;
+        }
     </style>
 </head>
 <body>
