--- a/templates/index.html
+++ b/templates/index.html
@@ -147,6 +147,7 @@
             text-align: center;
         }
                 .footer:hover {
+                    letter-space:0.4em;
             margin-top: 3rem;
             font-size: 0.9rem;
             color: black;
